style(oneput): 0 offset for outline to avoid clipping in li tags

--- a/packages/jsed/src/styles/jsed-defaults.css
+++ b/packages/jsed/src/styles/jsed-defaults.css
@@ -29,7 +29,8 @@
   --jsed-focus-bg: rgba(180, 220, 255, 0.3);
   --jsed-focus-sibling-outline: 0.75px solid rgba(80, 100, 80, 1);
   --jsed-focus-sibling-outline: none;
-  --jsed-focus-sibling-outline-offset: 0.75px;
+  --jsed-focus-outline-offset: 0px;
+  --jsed-focus-sibling-outline-offset: 0px;
   --jsed-focus-sibling-background: rgba(180, 200, 180, 0.4);
 
   --jsed-token-focus-text: white;
@@ -52,7 +53,8 @@
   --jsed-focus-bg: rgba(96, 165, 250, 0.18);
   --jsed-focus-sibling-outline: 0.75px solid rgba(134, 239, 172, 0.7);
   --jsed-focus-sibling-outline: none;
-  --jsed-focus-sibling-outline-offset: 0.75px;
+  --jsed-focus-outline-offset: 0px;
+  --jsed-focus-sibling-outline-offset: 0px;
   --jsed-focus-sibling-background: rgba(80, 100, 80, 0.2);
 
   --jsed-token-focus-text: #f8fafc;
@@ -171,7 +173,7 @@
 
 .jsed-focus {
   outline: solid var(--jsed-focus-outline) 0.5px;
-  outline-offset: 0.75px;
+  outline-offset: var(--jsed-focus-outline-offset);
   background-color: var(--jsed-focus-bg);
 }
 
